<resources>
    <string name="app_name">Event Manager</string>
    <string name="title_activity_bottom_navigation">Home Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_event">CreateEventActivity</string>

    <string name="Gender">Gender</string>
    <string name="male">Male</string>
    <string name="Female">Female</string>

    <string name="enter_your_phone_number">Enter your phone number*</string>
    <string name="enter_your_first_name">First Name*</string>
    <string name="enter_your_last_name">Last Name*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="password">Password*</string>
    <string name="address_line_1">Address Line 1*</string>
    <string name="postal_code">Postal Code*</string>
    <string name="country">Country*</string>
    <string name="open_country_picker">Open Country Picker</string>
    <string name="email">Email*</string>
    <string name="your_password">your password</string>
    <string name="Not_prefer_to_say">not prefer to say</string>
    <string name="not_prefer_to_say">Not prefer to say</string>
    <string name="edit">Edit</string>

    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>

    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>

</resources>
